--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "md5": "^2.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "uuid": "^7.0.3",
     "uuidv4": "^6.0.7"
   },
